@@ -4,6 +4,9 @@ software-store (0.2.2) UNRELEASED; urgency=low
     - fix icon theme name
   * softwarestore/view/appview.py:
     - ignore Unknown file format errors
+    - no longer use single click, but use a custom CellRenderer
+      instead that provides a single-click arrow at the end of
+      the app description column (LP: #419791)
   * softwarestore/view/appview.py:
     - fix incorrect type mixing in iter_next (LP: #422036)
   * softwarestore/view/appdetailsview.py:
@@ -13,7 +16,7 @@ software-store (0.2.2) UNRELEASED; urgency=low
     - use "Comment", "GenericName" and pkg.summary (in this order)
       for the application summary
     - add missing "locale.setlocale()"
-
+  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Sep 2009 08:51:35 +0200
 
 software-store (0.2.1) karmic; urgency=low
